--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dom-testing-library": "^3.19.3",
+    "jest-dom": "^3.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-testing-library": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
