--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "pairing-exercise-reactjs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.13",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
