--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lodash": "^4.17.13",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
